--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+    <h1 class="heading">Add "#debug" after the URL for debuging</h1>
     <canvas class="webgl"></canvas>
     <script type="module" src="./script.js"></script>
 </body>
